--- a/styles/Recipe.module.scss
+++ b/styles/Recipe.module.scss
@@ -1,6 +1,6 @@
 .recipe {
   h1 {
-    font-size: 48px;
+    font-size: 38px;
     font-weight: bolder;
     color: #000;
     margin-bottom: 15px;
@@ -49,7 +49,7 @@
 
   img {
     border: 0.5px solid #444;
-    height: auto;
-    width: 100%;
+    max-height: 60vh;
+    width: auto;
   }
 }
