--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -37,12 +37,13 @@ main {
 .recipes-list {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  gap: 40px;
+  gap: 20px;
   list-style: none;
   padding: 0;
 
   .recipe-card {
-    text-align: start;
+    margin: 0 auto;
+    text-align: center;
     a {
       display: block;
       height: 100%;
